ADD info about new filter; CHANGE names of buttons in ui

--- a/docs/de-de/modules/artikel/pages/artikelsuche.adoc
+++ b/docs/de-de/modules/artikel/pages/artikelsuche.adoc
@@ -6,7 +6,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 13.05.2022
+zuletzt bearbeitet 02.06.2022
 ////
 
 //ToDo - falls es irgendwann die erweiterte Suche wieder gibt, dann die erweiterte Optionen wieder einbauen (die Erklärungen sind in die FAQs auskommentiert und ansonsten lokal auf dem Rechner gespeichert)
@@ -41,11 +41,11 @@ xref:artikel:suchen.adoc#200[Mehr zum Thema].
 ======
 
 .Suchfilter
-[cols="1,4a"]
+[cols="1s,4a"]
 |===
 |Filter |Erläuterung
 
-| *Volltextsuche*
+| Volltextsuche
 |Gib Artikeldaten ein, z.B. den Namen oder Modell eines Artikels oder ein passendes Stichwort.
 Die Suchergebnisse liefern Produkte, die mit diesen Daten übereinstimmen.
 
@@ -69,66 +69,80 @@ Die Suchergebnisse liefern Produkte, die mit diesen Daten übereinstimmen.
 Das heißt, es werden nur die Artikel gefunden, die allen eingegebenen Suchbegriffen entsprechen.
 Gibst du zum Beispiel "Nike Sweatshirt Tracksuit" ein, dann werden nur Artikel gefunden, die den Begriffen "Nike" UND "Sweatshirt" UND "Tracksuit" entsprechen.
 
-| *Varianten-IDs*
+| Varianten-IDs
 |Gib eine oder mehrere IDs ein, um nach den Varianten mit diesen IDs zu suchen.
 
 *_Hinweis_*:
 Mehrere IDs müssen durch Kommas getrennt werden.
 Beispiel: `1001, 1002, 1003`
 
-| *Artikel-IDs*
+| Artikel-IDs
 |Gib eine oder mehrere IDs ein, um nach den Artikeln mit diesen IDs zu suchen.
 
 *_Hinweis_*:
 Mehrere IDs müssen durch Kommas getrennt werden.
 Beispiel: `101, 102, 103`
 
-| *Variantennummer*
+| Variantennummer
 |Gib eine Variantennummer ein, um nach der Variante mit dieser Nummer zu suchen.
 
 *_Hinweis_*:
 Die Variantennummer muss nicht zwangsläufig eine Zahl sein.
 Sie kann auch eine alphanumerische Zeichenkette sein, zum Beispiel ABC-1234-D.
 
-[cols="1,4a"]
+[cols="1s,4a"]
 !===
 
-! *Ist Gleich (=)*
+! Ist Gleich (=)
 !
 Beispiel: Suche nach der Variante mit der Nummer 100.
 
-! *Enthält (≈)*
+! Enthält (≈)
 !
 Beispiel: Suche nach allen Varianten, deren Nummern die Zahl 100 enthalten, z.B. 1001, 410037, 100, ABC-41003-D.
 
 !===
 
-| *Barcode-Code*
+| Barcode-Code
 |Gib einen Barcode ein, um nach der xref:artikel:verzeichnis.adoc#260[Variante mit diesem Code] zu suchen.
 
-[cols="1,4a"]
+[cols="1s,4a"]
 !===
 
-! *Ist Gleich (=)*
+! Ist Gleich (=)
 !
 Beispiel: Suche nach der Variante mit dem Barcode 012345678905.
 
-! *Enthält (≈)*
+! Enthält (≈)
 !
 Beispiel: Suche nach allen Varianten, deren Nummern die Zahl 0123 enthalten, z.B. [.underline]##0123##45678905, 9876[.underline]##0123##6426, 054845[.underline]##0123##0.
 
 !===
 
-| *Verfügbarkeit*
+//| Kategorien
+//|Klicke auf icon:pencil[role="darkGrey"] und wähle eine oder mehrere Kategorien aus dem Kategorienbaum aus (icon:check-square[role="blue"]).
+//Die Suchergebnisse liefern nur Produkte, die in _exakt_ diese Kategorie einsortiert sind.
+
+//*_Hinweis_*: Wenn du eine Hauptkategorie wählst, werden _nicht automatisch_ alle Unterkategorien mit ausgewählt.
+
+//*_Beispiel_*:
+//Stell dir mal vor, in deinem System gibt es den Kategoriepfad "Kleidung » Oberteile » T-Shirts".
+//Wenn du nur die Hauptkategorie "Kleidung" wählst, dann wird die Unterkategorie "Kleidung » Oberteile » T-Shirts" _nicht mit ausgewählt_.
+//Deine Suchanfrage würde sich nur auf Artikel beziehen, die in die Hauptkategorie "Kleidung" sind.
+
+//*_Wie wähle ich Unterkategorien?_*:
+//Klicke auf icon:chevron-right[role="darkGrey"], um eine Hauptkategorie zu öffnen und ihre Unterkategorien zu sehen.
+
+| Verfügbarkeit
 |Wähle eine oder mehrere Verfügbarkeitsstufen aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
 Die Suchergebnisse liefern nur Produkte, die mit einer dieser xref:artikel:verzeichnis.adoc#220[Verfügbarkeitsstufen] verknüpft sind.
 
-| *Herkünfte*
+| Herkünfte
 |Willst du nach Produkten suchen, die über einen bestimmten Vertriebskanal verkauft werden?
 Wähle eine oder mehrere Herkünfte aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
 Die Suchergebnisse liefern nur Produkte, die mit einer dieser xref:artikel:verzeichnis.adoc#280[Herkünfte] verknüpft sind.
 
-| *Aktiv*
+| Aktiv
 |Möchtest du nach xref:artikel:verzeichnis.adoc#220[aktiven Artikeln] suchen?
 
 * *Ja* = Nur aktive Artikel werden in den Suchergebnissen angezeigt.
@@ -137,21 +151,21 @@ Die Suchergebnisse liefern nur Produkte, die mit einer dieser xref:artikel:verze
 *_Hintergrund-Info_*: Varianten werden erst im plentyShop oder auf Marktplätzen sichtbar, wenn sie aktiviert wurden.
 Du kannst also an inaktiven Varianten arbeiten, bevor sie verkaufsfertig sind.
 
-| *Hauptvariante*
+| Hauptvariante
 | * *Ja* = Die Suchergebnisse enthalten nur xref:artikel:struktur.adoc#600[Hauptvarianten].
 * *Nein* = Die Suchergebnisse enthalten nur xref:artikel:struktur.adoc#600[Untervarianten].
 
-| *Lieferanten*
+| Lieferanten
 |Wähle ein oder mehrere Lieferanten aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
 
-[cols="1,4a"]
+[cols="1s,4a"]
 !===
 
-! *IN*
+! IN
 !
 Die Suchergebnisse liefern nur Produkte, die mit einem dieser xref:artikel:verzeichnis.adoc#300[Lieferanten] verknüpft sind.
 
-! *NOT IN*
+! NOT IN
 !
 Die Suchergebnisse liefern nur Produkte, die _nicht_ mit einem dieser xref:artikel:verzeichnis.adoc#300[Lieferanten] verknüpft sind.
 
@@ -160,54 +174,54 @@ Die Suchergebnisse liefern nur Produkte, die _nicht_ mit einem dieser xref:artik
 *_Voraussetzung_*: Hast du bereits die xref:warenwirtschaft:suppliers.adoc#[Kontaktdaten für deine Lieferanten] in plentymarkets hinterlegt?
 Diese Dropdown-Liste enthält nur die Lieferanten, die bereits in deinem plentymarkets System vorhanden sind.
 
-| *Verkaufspreise*
+| Verkaufspreise
 |Wähle einen oder mehrere Verkaufspreise aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
 Die Suchergebnisse liefern nur Produkte, die mit einem dieser xref:artikel:verzeichnis.adoc#340[Verkaufspreise] verknüpft sind.
 
 *_Voraussetzung_*: Hast du bereits xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets angelegt]?
 Diese Dropdown-Liste enthält nur die Verkaufspreise, die bereits in deinem plentymarkets System vorhanden sind.
 
-| *Mandanten (Shops)*
+| Mandanten (Shops)
 |Wähle einen oder mehrere Mandanten (Shops) aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
 
-[cols="1,4a"]
+[cols="1s,4a"]
 !===
 
-! *IN*
+! IN
 !
 Die Suchergebnisse liefern nur Produkte, die mit einem dieser xref:artikel:verzeichnis.adoc#290[Mandanten] verknüpft sind.
 
-! *NOT IN*
+! NOT IN
 !
 Die Suchergebnisse liefern nur Produkte, die _nicht_ mit einem dieser xref:artikel:verzeichnis.adoc#290[Mandanten] verknüpft sind.
 
 !===
 
-|[#intable-paket]*Paket*
+|Paket
 |Möchtest du nach xref:artikel:multipacks-pakete-sets.adoc#[Artikelpaketen] suchen?
 
 * *Ist kein Paket* = Die Suchergebnisse umfassen Artikel und Varianten, die weder der Hauptartikel noch Bestandteile eines Artikelpakets sind.
 * *Ist ein Paket* = Die Suchergebnisse umfassen nur Artikel und Varianten, die den Hauptartikel eines Artikelpakets darstellen.
 * *Ist ein Bestandteil* = Die Suchergebnisse umfassen nur Artikel und Varianten, die Bestandteile eines Artikelpakets sind.
 
-| *Hersteller*
+| Hersteller
 |Wähle einen oder mehrere Hersteller aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
 Die Suchergebnisse liefern nur Produkte, die mit einem dieser xref:artikel:verzeichnis.adoc#60[Hersteller] verknüpft sind.
 
 *_Voraussetzung_*: Hast du bereits die xref:artikel:hersteller.adoc#[Kontaktdaten für deine Hersteller] in plentymarkets hinterlegt?
 Diese Dropdown-Liste enthält nur die Hersteller, die bereits in deinem plentymarkets System vorhanden sind.
 
-| *Tags*
+| Tags
 |Wähle ein oder mehrere Tags aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
 
-[cols="1,4a"]
+[cols="1s,4a"]
 !===
 
-! *IN*
+! IN
 !
 Die Suchergebnisse liefern nur Produkte, die mit einem dieser xref:artikel:verzeichnis.adoc#210[Tags] verknüpft sind.
 
-! *NOT IN*
+! NOT IN
 !
 Die Suchergebnisse liefern nur Produkte, die _nicht_ mit einem dieser xref:artikel:verzeichnis.adoc#210[Tags] verknüpft sind.
 
