--- a/docs/de-de/modules/artikel/pages/suche.adoc
+++ b/docs/de-de/modules/artikel/pages/suche.adoc
@@ -162,7 +162,7 @@ Wähle den gewünschten Such-Modus aus der Dropdown-Liste.
 
 | *Typ*
 |Möchtest du nach einem bestimmten Artikeltyp suchen? Verwende diesen Filter und grenze deine Suche so ein, dass sie nur Standardartikel, xref:artikel:multipacks-pakete-sets.adoc#[Setartikel oder Multipacks] enthält. +
-*_Wie sieht es mit Artikelpaketen aus?_:* Es ist auch möglich, nach Artikelpaketen oder einzelnen Paketbestandteilen zu suchen. Verwende dazu den Filter xref:artikel:suche.adoc#intable-paket[Paket].
+*_Wie sieht es mit Artikelpaketen aus?_:* Es ist auch möglich, nach Artikelpaketen oder einzelnen Paketbestandteilen zu suchen. Verwende dazu den Filter *Paket*.
 
 |[#intable-beschreibung]*In Beschreibung*
 |Wähle diese Option (icon:check-square[role="blue"]), um nach einem Stichwort in der Artikelbeschreibung zu suchen. Gib das Stichwort in das Feld xref:artikel:suche.adoc#intable-artikeldaten[Artikeldaten] weiter oben ein.
@@ -241,7 +241,7 @@ Die Suchergebnisse liefern nur Produkte, die xref:artikel:artikel-verwalten.adoc
 
 * *Ohne Colli* = Artikel des Typs Colli werden von der Suche ausgeschlossen.
 
-|[#intable-paket]*Paket*
+| *Paket*
 a|Möchtest du nach xref:artikel:multipacks-pakete-sets.adoc#[Artikelpaketen] oder einzelnen Paketbestandteilen suchen?
 
 * *Ja* = Die Suchergebnisse umfassen nur Artikel und Varianten, die den Hauptartikel eines Artikelpakets darstellen.
