--- a/docs/en-gb/modules/item/pages/search.adoc
+++ b/docs/en-gb/modules/item/pages/search.adoc
@@ -162,7 +162,7 @@ Choose the appropriate search mode from the drop-down list.
 
 | *Type*
 |Do you want to search for a particular type of item? Use this filter to narrow down the search results so that they only include default items, xref:item:combining-products.adoc#[sets or multi-packs]. +
-*_What about item bundles?_*: It’s also possible to search for item bundles or individual bundle components. Use the xref:item:search.adoc#intable-bundle[Bundle] filter to do so.
+*_What about item bundles?_*: It’s also possible to search for item bundles or individual bundle components. Use the *Bundle* filter to do so.
 
 |[#intable-description]*Browse description*
 |Select this option (icon:check-square[role="blue"]) to search for a keyword in the item description. Enter the keyword into the xref:item:search.adoc#intable-item-data[Item data] field further above.
@@ -241,7 +241,7 @@ The search results only display products that are xref:item:managing-items.adoc#
 
 * *No colli* = Items of the type Colli will be excluded from the search.
 
-|[#intable-bundle]*Bundle*
+| *Bundle*
 a|Do you want to search for xref:item:combining-products.adoc#[item bundles] or individual bundle components?
 
 * *Yes* = The search results will only include items and variations that are the main item of a bundle.
