--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -1882,7 +1882,7 @@ In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden 
 [discrete]
 ==== Wie pflege ich den Preis im Backend?
 
-Der niedrigste Preis kann manuell in plentymarkets eingegeben, importiert oder automatisch berechnet werden.
+Der niedrigste Preis kann manuell in plentymarkets eingegeben, importiert oder automatisch ermittelt werden.
 
 IMPORTANT: Dieser Wert wird ab link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS-Version 5.0.51^] im Webshop angezeigt.
 Wie du den Wert in deinem plentyShop anzeigen kannst, wird weiter unten erklärt.
@@ -1891,7 +1891,7 @@ Wie du den Wert in deinem plentyShop anzeigen kannst, wird weiter unten erklärt
 Manuelle Eingabe:
 
 . Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
-. Klicke in einer Zeile auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:sell[set=material, role="darkGrey"] *Niedrigster Preis »* icon:pencil[role="darkGrey"] *Manuelle Eingabe aktivieren*. +
+. Klicke in einer Zeile auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:sell[set=material, role="darkGrey"] *Niedrigster Preis »* icon:pencil[role="darkGrey"] *Manuell festlegen*. +
 → Die Spalte wird editierbar und automatisch mit dem Bruttopreis gefüllt.
 . Gib bei Bedarf einen anderen Wert in die Spalte ein.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
@@ -1899,17 +1899,17 @@ Manuelle Eingabe:
 ---
 
 [.instruction]
-Automatische Berechnung:
+Automatische Ermittlung:
 
 . Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
-. Klicke in einer Zeile auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:sell[set=material, role="darkGrey"] *Niedrigster Preis »* icon:calculate_acquisition_pricepng[set=plenty, role="darkGrey"] *Automatische Berechnung aktivieren*. +
+. Klicke in einer Zeile auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:sell[set=material, role="darkGrey"] *Niedrigster Preis »* icon:calculate_acquisition_pricepng[set=plenty, role="darkGrey"] *Automatische Ermittlung aktivieren*. +
 → Die Spalte wird automatisch mit dem niedrigsten Preis der letzten 30 Tage gefüllt.
-Dieser Wert wird mit Hilfe der xref:artikel:aenderungen.adoc#[Änderungshistorie] berechnet.
+Dieser Wert wird mit Hilfe der xref:artikel:aenderungen.adoc#[Änderungshistorie] ermittelt.
 Falls du die Änderungshistorie bisher noch nicht aktiviert hast, erscheint ein Pop-up-Fenster, das dich über die anfallenden Kosten informiert.
 Du musst deine Entscheidung zur Aktivierung der kostenpflichtigen Änderungshistorie bestätigen.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
-TIP: Der niedrigste Preis wird automatisch berechnet, etwa 90 Sekunden nachdem du die Einstellung zum ersten Mal aktiviert und gespeichert hast. Danach wird er automatisch einmal pro Nacht berechnet.
+TIP: Der niedrigste Preis wird automatisch ermittelt, etwa 90 Sekunden nachdem du die Einstellung zum ersten Mal aktiviert und gespeichert hast. Danach wird er automatisch einmal pro Nacht ermittelt.
 
 ---
 
