--- a/docs/en-gb/modules/item/pages/item-search.adoc
+++ b/docs/en-gb/modules/item/pages/item-search.adoc
@@ -5,7 +5,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 11.03.2022
+zuletzt bearbeitet 02.06.2022
 ////
 
 //ToDo - once the UI texts are updated, check to make sure the UI texts match the texts in the manual page
@@ -124,6 +124,20 @@ Example: Search for the variation with the barcode 012345678905.
 Example: Search for all of the variations that have a number containing 0123, e.g. [.underline]##0123##45678905, 9876[.underline]##0123##6426, 054845[.underline]##0123##0.
 
 !===
+
+//| *Categories*
+//|Click on icon:pencil[role="darkGrey"] and select one or more categories from the category tree (icon:check-square[role="blue"]).
+//The search results only display products that are sorted into this _exact_ category.
+
+//*_Note_*: If you select a main category, then the sub-categories _will not automatically_ be selected too.
+
+//*_Example_*:
+//Imagine you have the category path "Clothing » Tops » T-Shirts".
+//If you only select the main category "Clothing", then the sub-category "Clothing » Tops » T-Shirts" _will not be selected too_.
+//Your search query would only relate to items that are sorted into the main category "Clothing".
+
+//*_How do I select sub-categories?_*:
+//Click on icon:chevron-right[role="darkGrey"] to open a main category and see its sub-categories.
 
 | *Availability*
 |Select one or more availability levels from the drop-down list (icon:check-square[role="blue"]).
