add info boxes on admin restrictions

--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -152,6 +152,12 @@ include::_includes:page$rechte.adoc[]
 [#400]
 == Dashboard-Ansicht erstellen
 
+[IMPORTANT]
+.Funktion nur für Admins verfügbar
+====
+Dashboard-Ansichten können nur von Benutzer:innen vom Typ *Admin* erstellt werden. Benutzer:innen vom Typ *Backend* können die Ansicht jedoch später sehen, wenn sie über die passenden <<#408, Rechte für die Dashboard-Ansicht>> verfügen.
+====
+
 Sobald du die <<#100, vorbereitenden Einstellungen>> vorgenommen hast, kannst du mit der Einrichtung des Dashboards beginnen.
 
 Grundsätzlich legst du auf einem neuen Dashboard zuerst verschiedene Bereiche an. Diese Darstellungsbereiche befüllst du im zweiten Schritt mit Daten, die in Form verschiedener Elemente angezeigt werden. Pro Bereich kannst du mehrere Elemente hinzufügen und individuell anordnen.
@@ -166,6 +172,13 @@ Zum besseren Verständnis empfehlen wir dir unser Video-Tutorial, in dem die ers
 === Verfügbare Funktionen im Bearbeitungsmodus
 
 Das Dashboard erlaubt dir viel Flexibilität beim Anordnen von Inhalten und Daten. Grundsätzlich platzierst du Darstellungsbereiche und Elemente intuitiv per Drag-and-Drop auf dem Dashboard. Jeder Bereich und jedes Element kann per Klick auf (icon:design_inline_edit[set=plenty]) weiter bearbeitet werden. <<table-dashboard-editing-mode>> beschreibt die Funktionen, die im Bearbeitungsmodus der Dashboard-Ansicht oben rechts im Menü *plentymarkets Logo (Start) » Dashboard* zur Verfügung stehen.
+
+
+[IMPORTANT]
+.Funktion nur für Admins verfügbar
+====
+Der Bearbeitungmodus steht nur Benutzer:innen vom Typ *Admin* zur Verfügung. Benutzer:innen vom Typ *Backend* können über den Bearbeitungsmodus keine Änderungen an der Dashboard-Ansicht vornehmen.
+====
 
 [[table-dashboard-editing-mode]]
 .Verfügbare Funktionen im Bearbeitungsmodus
@@ -208,6 +221,12 @@ Das Dashboard erlaubt dir viel Flexibilität beim Anordnen von Inhalten und Date
 
 Zusätzlich zur Standardansicht im Menü *plentymarkets Logo (Start) » Dashboard* kannst du weitere individuelle Ansichten erstellen und speichern. Je nachdem, wie detailliert du Kennzahlen auf dem Dashboard auswerten möchtest, kannst du zum Beispiel separate Ansichten für verschiedene Themenbereiche und Daten erstellen.
 
+[IMPORTANT]
+.Funktion nur für Admins verfügbar
+====
+Neue Dashboard-Ansichten können nur von Benutzer:innen vom Typ *Admin* erstellt werden. Benutzer:innen vom Typ *Backend* können die Ansicht jedoch später sehen, wenn sie über die passenden <<#408, Rechte für die Dashboard-Ansicht>> verfügen.
+====
+
 [.instruction]
 Neue Dashboard-Ansicht erstellen:
 
@@ -225,7 +244,7 @@ Pro Dashboard-Ansicht kannst zu entscheiden, ob nur bestimmte Benutzer:innen ode
 [#408]
 === Rechte für Dashboard-Ansichten vergeben
 
-Überlege dir, welche Benutzer:innen die Standardansicht sehen dürfen. Auch den Zugriff auf weitere Ansichten kannst du pro Benutzer:in oder Rolle einschränken oder erlauben.
+Überlege dir, welche Benutzer:innen die Standardansicht sehen dürfen. Auch den Zugriff auf weitere Ansichten kannst du pro Benutzer:in oder Rolle einschränken oder erlauben. Beachte, dass Benutzer:innen oder Rollen trotz diesem Zugriff keine Dashboard-Ansichten bearbeiten und auch keine neuen Ansichten anlegen können.
 
 Öffne bei einer bereits angelegten <<#407, Dashboard-Ansicht>> den Bearbeitungsmodus (icon:design_inline_edit[set=plenty]). Klicke auf die Schaltfläche *Rechteverwaltung*, um zu den Einstellungen für Benutzer:innen und Rollen zu gelangen und die Dashboard-Ansicht freizugeben.
 
@@ -269,6 +288,12 @@ Sichtbarkeit von Dashboard-Ansichten festlegen:
 
 [#410]
 == Dashboard-Elemente hinzufügen und verwenden
+
+[IMPORTANT]
+.Funktion nur für Admins verfügbar
+====
+Dashboard-Elemente können nur von Benutzer:innen vom Typ *Admin* hinzugefügt werden. Benutzer:innen vom Typ *Backend* können die hinzugefügten Elemente jedoch später sehen, wenn sie über die passenden <<#408, Rechte für die Dashboard-Ansicht>> verfügen.
+====
 
 Das Dashboard bietet verschiedene Möglichkeiten zur Darstellung von Kennzahlen oder anderen wichtigen Informationen. So kannst du Daten genau in der Form visualisieren, die du benötigst. Die folgenden Typen von Elementen stehen dir zur Verfügung:
 
@@ -1230,6 +1255,12 @@ Daten aus Diagrammen einsehen und exportieren:
 == Zusätzliche Informationen darstellen
 
 Neben der Darstellung von Daten in Form von Kacheln, Tabellen, Diagrammen und Zeilen lassen sich weitere Informationen innerhalb aller Bereiche auf dem Dashboard einbinden. So kannst du Textfelder mit wichtigen Zusatzinformationen für deine Mitarbeiter:innen oder selbst konfigurierte Schaltflächen zu deinem Dashboard hinzufügen und genau nach deinen Anforderungen gestalten.
+
+[IMPORTANT]
+.Funktion nur für Admins verfügbar
+====
+Die in den folgenden Kapiteln beschriebenen Elemente können nur von Benutzer:innen vom Typ *Admin* hinzugefügt werden. Benutzer:innen vom Typ *Backend* können die hinzugefügten Elemente jedoch später sehen, wenn sie über die passenden <<#408, Rechte für die Dashboard-Ansicht>> verfügen.
+====
 
 [#820]
 === Formatierter Text
