--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -32,7 +32,7 @@ So kannst du pro Kennzahl genau eingrenzen, wie die Daten pro Kennzahl berechnet
 
 Kennzahlen legst du entweder im Menü *Einrichtung » plentyBI » Kennzahlen* oder direkt aus dem Dashboard heraus an. Im Folgenden werden beide Vorgehensweisen erklärt.
 
-[TIP]
+[NOTE]
 .Benutzerrechte beachten
 ====
 Falls Benutzer:innen ohne Admin-Zugang zu deinem plentymarkets System Kennzahlen anlegen sollen, vergib zuerst die <<#300, notwendigen Benutzerrechte>>.
