--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -32,7 +32,7 @@ This way, you can precisely define the conditions for the calculation of each ke
 
 You can either create key figures in the *Setup » plentyBI » Key figures* menu or directly from the dashboard. Both methods are described below.
 
-[TIP]
+[NOTE]
 .Pay attention to user rights
 ====
 If users without admin access to your plentymarkets system should be allowed to create key figures, assign the <<#300, necessary user rights>> first.
@@ -152,6 +152,12 @@ include::_includes:page$rights.adoc[]
 [#400]
 == Setting up a dashboard view
 
+[IMPORTANT]
+.Function only available for admins
+====
+Dashboard views can only be set up by users of the type *Admin*. However, users of the type *Back end* may be able to see the view later if they have been assigned the necessary <<#408, rights for dashboard views>>.
+====
+
 As soon as you have carried out the <<#100, preparatory settings>>, you are ready to set up your dashboard.
 
 The first steps on a new dashboard always consist of placing different areas for display on the dashboard. Then, you fill these areas with data that can be displayed in the form of different elements. You can add and individually position several elements per area.
@@ -160,6 +166,13 @@ The first steps on a new dashboard always consist of placing different areas for
 === Available settings in the editing mode
 
 The dashboard allows you a high degree of flexibility for positioning content and data. This works by intuitively positioning areas for content and elements on the dashboard via drag-and-drop.  Each area and each element can be further edited by clicking on icon:design_inline_edit[set=plenty]. <<table-dashboard-editing-mode>> explains the functions available in the editing mode for the dashboard view in the upper right corner of the *plentymarkets logo (Start) » Dashboard* menu.
+
+
+[IMPORTANT]
+.Function only available for admins
+====
+The editing mode is only available for users of the type *Admin*. Users of the type *Back end* cannot use the editing mode to make any changes to the dashboard view.
+====
 
 [[table-dashboard-editing-mode]]
 .Available settings in the editing mode
@@ -202,6 +215,12 @@ The dashboard allows you a high degree of flexibility for positioning content an
 
 In addition to the default view available in the *plentymarkets logo (Start) » Dashboard* menu, you can create and save additional individual views. Depending on how detailed the visualisation of data on your dashboard should be, you can create separate views for different topics and data.
 
+[IMPORTANT]
+.Function only available for admins
+====
+New dashboard views can only be set up by users of the type *Admin*. However, users of the type *Back end* may be able to see the view later if they have been assigned the necessary <<#408, rights for dashboard views>>.
+====
+
 [.instruction]
 Setting up a new dashboard view:
 
@@ -219,7 +238,7 @@ For each dashboard view, you can restrict access to certain users or user roles.
 [#408]
 === Assigning rights for dashboard views
 
-Decide which users should see the default view.  You can also restrict or allow access for additional dashboard views per user or user role.
+Decide which users should see the default view.  You can also restrict or allow access for additional dashboard views per user or user role. Note that users or roles of the type Back end cannot edit dashboard views or create new views, even if they have been assigned those rights.
 
 Open the editing mode (icon:design_inline_edit[set=plenty]) for an already existing <<#407, dashboard view>>. Click on *Rights management* to access the settings for users and user roles and decide which dashboard view(s) should be visible for them.
 
@@ -263,6 +282,12 @@ Determining visibility of dashboard views:
 
 [#410]
 == Adding and using dashboard elements
+
+[IMPORTANT]
+.Function only available for admins
+====
+Dashboard elements can only be added by users of the type *Admin*. However, users of the type *Back end* may be able to see the added elements later if they have been assigned the necessary <<#408, rights for dashboard views>>.
+====
 
 The dashboard offers you different possibilities to display key figures and other important information. Thus, you can visualise data in the exact way you need. The following types of elements are available:
 
@@ -351,7 +376,7 @@ include::partial$new-dashboard-element.adoc[]
 
 | *Conditional colouring*
 a| Do you want to display the tile in a particular colour? To do so, select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the tile. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
-*_Optional:_*Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the tile. You can enter two types of links: +
+*_Optional:_* Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the tile. You can enter two types of links: +
 
 * Internal link: An internal link opens a menu within the back end of your plentymarkets system. To do so, enter the route of the menu that should be opened beginning with a */*. The link has to include everything displayed in the URL of the menu after the *terra* component. +
 *_Example:_* If the order overview should be opened when clicking on the button, enter the link */order/order-search*. +
@@ -363,7 +388,7 @@ a| Do you want to display the tile in a particular colour? To do so, select the 
 | Use this setting to add a customised option to the *Actions* menu (icon:more_vert[set=material, role=blue]) on the tile. You can also determine conditions that have to be fulfilled for the option to be displayed, and decide what happens if users click on the option. +
 Click on (icon:settings[role=darkGrey]) to add one or more shortcuts.
 
-[#intable-tile-details]*Link to detailed dashboard view*
+| [#intable-tile-details]*Link to detailed dashboard view*
 | Select which already existing dashboard view should be opened of you open the *Actions* menu icon:more_vert[set=material, role=blue] on the tile and select the option *Tile details*. +
 If you select the option *None*, a default dashboard view provided by the system is opened when you clicked on *Tile details*. This dashboard view contains more detailed information on the results and the data of the key figure that has been selected as a basis of the tile.
 
@@ -450,7 +475,7 @@ Carrying out settings for rows:
 
 | *Time interval*
 | This setting narrows down the values of the selected *Period*. Thus, the time interval always has to be shorter than the selected *Period*. +
-*_Example:I_* If you have selected the current month as *Period* and the option *Week* as *Time interval*, only the value for the current week will be displayed on the row.
+*_Example:_* If you have selected the current month as *Period* and the option *Week* as *Time interval*, only the value for the current week will be displayed on the row.
 
 | *Primary value*
 | The primary value is displayed a little bigger than the *Secondary value* on the tile. For this option, you can select the simple *Key figure result* or the difference (*Delta*) between the actual value and the xref:business-decisions:myview-dashboard.adoc#intable-targetvalue[target value] defined in the key figure. You can display the difference (delta) as an absolute value or as a *Percentage*. Click on (icon:settings[set=material]) to determine how many decimal places should be displayed for the value.
@@ -466,7 +491,7 @@ Carrying out settings for rows:
 
 | *Conditional colouring*
 | Do you want to display the row in a particular colour? To do so, select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the row. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
-*_Optional:_*Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the row. You can enter two types of links: +
+*_Optional:_* Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the row. You can enter two types of links: +
 
 * Internal link: An internal link opens a menu within the back end of your plentymarkets system. To do so, enter the route of the menu that should be opened beginning with a */*. The link has to include everything displayed in the URL of the menu after the *terra* component. +
 *_Example:_* If the order overview should be opened when clicking on the button, enter the link */order/order-search*. +
@@ -478,8 +503,8 @@ Carrying out settings for rows:
 | Use this setting to add a customised option to the *Actions* menu (icon:more_vert[set=material]) on the row. You can also determine conditions that have to be fulfilled for the option to be displayed, and decide what happens if users click on the option. +
 Click on (icon:settings[role=darkGrey]) to add one or more shortcuts.
 
-[#intable-row-details]*Link to detailed dashboard view*
-| Select which already existing dashboard view should be opened when users click on the *Actions* (icon:more_vert[set=material] menu next to the row and select the option *Row details*. +
+| [#intable-row-details]*Link to detailed dashboard view*
+| Select which already existing dashboard view should be opened when users click on the *Actions* (icon:more_vert[set=material]) menu next to the row and select the option *Row details*. +
 If you select the option *None*, a default dashboard view provided by the system is opened when you click on *Row details*. This dashboard view contains more detailed information on the results and the data of the key figure that has been selected as the basis of the row.
 
 | *Parameters for detailed view*
@@ -807,11 +832,11 @@ Carrying out settings for bar charts and line graphs:
 
 | *Time interval*
 | This setting narrows down the values of the selected *Period*. Thus, the time interval always has to be shorter than the selected *Period*. +
-*_Example:_*If you have selected the current month as *Period* and the option *Week* as *Time interval*, the values for each completed week of the current month will be displayed as separate bar or graph.
+*_Example:_* If you have selected the current month as *Period* and the option *Week* as *Time interval*, the values for each completed week of the current month will be displayed as separate bar or graph.
 
 | *Additional time interval*
 | This setting displays additional buttons on the top right of the bar chart or line graph. These buttons allow you to filter the data displayed in the graph according to additional time intervals. This way, you can easily switch between different time intervals. Activate one or more of the options *Day*, *Month*, *Quarter* or *Year*. +
-*_Example:_*If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
+*_Example:_* If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
 
 | *Click on bar for precise time interval* (only available for bar charts)
 | Activate this option to display the data of the bar chart for the next smaller time interval. You can click on the bar repeatedly, until the smallest time interval (days) has been reached. Use the button *Reset interval* on the top right of the diagram to quickly return to the original display of data.
@@ -882,11 +907,11 @@ Carrying out settings for simple bar charts:
 
 | *Time interval*
 | This setting narrows down the values of the selected *Period*. Thus, the time interval always has to be shorter than the selected *Period*. +
-*_Example:_*If you have selected the current month as *Period* and the option *Week* as *Time interval*, the values for each completed week of the current month will be displayed as separate bar or graph.
+*_Example:_* If you have selected the current month as *Period* and the option *Week* as *Time interval*, the values for each completed week of the current month will be displayed as separate bar or graph.
 
 | *Additional time interval*
 | This setting displays additional buttons on the top right of the bar chart or line graph. These buttons allow you to filter the data displayed in the graph according to additional time intervals. This way, you can easily switch between different time intervals. Activate one or more of the options *Day*, *Month*, *Quarter* or *Year*. +
-*_Example:_*If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
+*_Example:_* If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
 
 | *Click on bar for precise time interval*
 | Activate this option to display the data of the bar chart for the next smaller time interval. You can click on the bar repeatedly, until the smallest time interval (days) has been reached. Use the button *Reset interval* on the top right of the diagram to quickly return to the original display of data.
@@ -1110,7 +1135,7 @@ Carrying out settings for funnel charts:
 
 | *Additional time interval*
 | This setting displays additional buttons on the top right of the bar chart or line graph. These buttons allow you to filter the data displayed in the graph according to additional time intervals. This way, you can easily switch between different time intervals. Activate one or more of the options *Day*, *Month*, *Quarter* or *Year*. +
-*_Example:_*If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
+*_Example:_* If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
 
 | *Number of columns*
 | Select how many units of the selected time interval should be displayed in the graph or chart. The starting point depends on the selected time period.
@@ -1213,6 +1238,12 @@ Use the *Export to Google Sheets* option to export the data of the graph to a Go
 
 In addition to displaying data as tiles, tables, charts and rows, you can include further information within all areas of the dashboard. This way, you can flexibly add text fields with important additional information for your colleagues or customised buttons according to your specific needs.
 
+[IMPORTANT]
+.Function only available for admins
+====
+The elements described in the following chapters can only be added by users of the type *Admin*. However, users of the type *Back end* may be able to see the added elements later if they have been assigned the necessary <<#408, rights for dashboard views>>.
+====
+
 [#820]
 === Formatted text
 
@@ -1227,7 +1258,7 @@ Displaying formatted text:
 → The settings menu opens.
 . In the settings menu, select the element *Formatted text* and drag-and-drop it to the desired position.
 . Click on the element *Formatted text* and enter the desired text in the settings menu. +
-*_Optional_*: Use the available formatting options for bold, italic or underlined text and for adding bullet points.
+*_Optional:_* Use the available formatting options for bold, italic or underlined text and for adding bullet points.
 . *Save* (icon:save[set=plenty]) the settings. +
 → The text is permanently displayed within the area.
 
@@ -1265,7 +1296,7 @@ Adding customised buttons:
 a|Enter a link that should be opened when clicking on the button. There are 2 ways of doing this: +
 
 * Internal link: An internal link opens a menu within the back end of your plentymarkets system. To do so, enter the route of the menu that should be opened beginning with a */*. The link has to include everything displayed in the URL of the menu after the *terra* component. +
-*_Examples:_* If the order overview should be opened when clicking on the button, enter the link */order/order-search*. Do you want to start a process by clicking on the button? Then enter the link */processes/execution/process-id*. Replace *process-id* with the ID of the process that should be started. +
+*_Example:_* If the order overview should be opened when clicking on the button, enter the link */order/order-search*. Do you want to start a process by clicking on the button? Then enter the link */processes/execution/process-id*. Replace *process-id* with the ID of the process that should be started. +
 
 * External link: Enter the complete link to the external page, beginning with *http://* or *https://*.
 
@@ -1297,7 +1328,7 @@ Copying an element:
 . Open the editing mode of the area (icon:pencil[role="blue"]).
 . Move the cursor over the element that you want to copy.
 . Click on *Copy* (icon:content_copy[set=material, role=”blue”]).
-. On the upper right corner of the area, click on *Paste* (icon:content_paste[set=material, role="blue"]). +
+. On the upper right corner of the area, click on *Paste*(icon:content_paste[set=material, role="blue"]). +
 → The element is added.
 . Move the cursor over the new element and click on *Edit* (icon:pencil[role="blue"]) to adjust the settings for the element.
 . *Save* (icon:save[set=plenty]) the settings.
