--- a/docs/en-gb/modules/markets/partials/viewing_logs.adoc
+++ b/docs/en-gb/modules/markets/partials/viewing_logs.adoc
@@ -9,9 +9,10 @@ For {market}, the following filters are recommended:
 .Filtering and checking log entries
 --
 . Go to *Data » Log*.
-. In the column to the left, select appropriate filters from the drop-down lists.
+. In the toolbar, click on icon:tune[set=material].
+. Select appropriate filters from the drop-down lists.
 . *_Optional:_* Select filters for dates and/or times to only show entries from a specific period. +
-*_Tip:_* For further information about the filters, refer to the xref:data:datalog.adoc#[Data log] page of the manual.
+*_Tip:_* For information about the filters, refer to the xref:data:datalog.adoc#[Data log] page of the manual.
 . Click on *Search* (icon:search[role="blue"]). +
 → The results are shown.
 . Check all entries for the levels *warning* and *error*. +
