ADD work to item faq page

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -444,6 +444,17 @@ Die folgenden Praxisbeispiele beziehen sich speziell auf Artikeldaten.
 --
 
 [.collapseBox]
+.*Ich verstehe ein Zuordnungsfeld für den Import nicht. Kann ich die Funktion nachschlagen?*
+--
+
+Ja.
+Wirf einen Blick auf das xref:daten:elasticSync-artikel.adoc#[Verzeichnis der Abgleich- und Zuordnungsfelder].
+Diese Seite dient als Referenz.
+Sie erklärt die verschiedenen Felder, die dir beim Importieren von Artikel- und Variantendaten zur Verfügung stehen.
+
+--
+
+[.collapseBox]
 .*#Kann ich einen FTP-Server# verwenden, um z.B. viele Artikelbilder gleichzeitig hochzuladen?*
 --
 
@@ -565,10 +576,17 @@ xref:artikel:eigenschaften.adoc#500[Weitere Informationen und Video-Tutorial].
 --
 
 [.collapseBox]
-.*#Was muss ich# tun, um eine Cross-Selling-Liste in meinem plentyShop darzustellen?*
+.*Was muss ich tun, um eine Cross-Selling-Liste in meinem plentyShop darzustellen?*
 --
 
-Text
+In nur zwei Schritten erzielst du zusätzliche Verkäufe mittels Cross-Selling:
+
+. Zuerst öffnest du das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Cross-Selling* und erstellst die Cross-Selling-Verbindungen.
+Das heißt, du entscheidest, welche Artikel miteinander verknüpft werden sollen.
+. Dann veröffentlichst du die Cross-Selling-Liste im plentyShop.
+Das heißt, du fügst das Widget *Artikel » Artikelliste* hinzu und passt die Widget-Einstellungen an.
+
+xref:artikel:cross-selling.adoc#[Weitere Informationen]
 
 --
 
@@ -683,10 +701,10 @@ Text
 --
 
 [.collapseBox]
-.*#Ich will Produkte kombinieren# und als eine Verkaufseinheit anbieten. Wie mache ich das?*
+.*Ich will Produkte kombinieren und als eine Verkaufseinheit anbieten. Wie mache ich das?*
 --
 
-Text
+include::page$multipacks-pakete-sets.adoc[tag=combining-products-preamble]
 
 --
 
