--- a/docs/en-gb/modules/item/pages/combining-products.adoc
+++ b/docs/en-gb/modules/item/pages/combining-products.adoc
@@ -8,27 +8,17 @@
 zuletzt bearbeitet 22.11.2021
 ////
 
+//tag::combining-products-preamble[]
+
 plentymarkets offers a variety of ways to combine products and sell them as a single unit.
-<<table-combining-products>> compares the possibilities and uses examples to illustrate them.
+The table compares the possibilities and uses examples to illustrate them.
 
-[TIP]
-.Are you familiar with how to manage items?
-====
-This page assumes that you already have xref:item:introduction.adoc#[basic knowledge of item management] in plentymarkets.
-For example, it assumes that you:
-
-* know the xref:item:structure.adoc#[difference between items and variations].
-* have already configured a few xref:item:settings.adoc#[preparatory settings] in your system.
-For example, that you’ve already created a xref:item:categories.adoc#[category structure], set up xref:fulfilment:preparing-the-shipment.adoc#1000[shipping profiles] for your items, etc.
-====
-
-[[table-combining-products]]
-.Combining products and selling them as a single unit
 [cols="1,5,1"]
 |====
 |Type |Explanation |Item type
 
-|<<#1000, Multipack>>
+|
+xref:item:combining-products.adoc#1000[Multipack]
 a| *_Example_*: 1 bottle of water, a package containing 6 bottles and a package containing 12 bottles.
 
 *_Technical specifications_*:
@@ -39,7 +29,8 @@ a| *_Example_*: 1 bottle of water, a package containing 6 bottles and a package 
 * Stock is managed for the main variation only.
 |Multipack
 
-|<<#2000, Bundle>>
+|
+xref:item:combining-products.adoc#2000[Bundle]
 a| *_Example_*: A beard care kit consisting of scissors, a brush, beard oil and beard wax.
 
 *_Technical specifications_*:
@@ -54,7 +45,8 @@ a| *_Example_*: A beard care kit consisting of scissors, a brush, beard oil and 
 The bundle item itself does not have stock.
 |Default
 
-|<<#3000, Set>>
+|
+xref:item:combining-products.adoc#3000[Set]
 a| *_Example_*: A football uniform composed of a jersey, shorts and socks. End customers can put their own uniforms together by selecting the appropriate size and colour for each of the three components.
 
 *_Technical specifications_*:
@@ -70,6 +62,18 @@ It’s not possible to sell item sets on marketplaces like Amazon and eBay.
 |Set
 |====
 
+//end::combining-products-preamble[]
+
+[TIP]
+.Are you familiar with how to manage items?
+====
+This page assumes that you already have xref:item:introduction.adoc#[basic knowledge of item management] in plentymarkets.
+For example, it assumes that you:
+
+* know the xref:item:structure.adoc#[difference between items and variations].
+* have already configured a few xref:item:settings.adoc#[preparatory settings] in your system.
+For example, that you’ve already created a xref:item:categories.adoc#[category structure], set up xref:fulfilment:preparing-the-shipment.adoc#1000[shipping profiles] for your items, etc.
+====
 
 [#1000]
 == Multipacks
