CHANGE page to reflect new tag ui

--- a/docs/en-gb/modules/_includes/pages/tags-search.adoc
+++ b/docs/en-gb/modules/_includes/pages/tags-search.adoc
@@ -3,52 +3,12 @@ Use the search function to find your tags and edit them further.
 
 . Go to *Setup » Settings » Tags*.
 .. *_Option 1_*: Click on icon:search[role="darkGrey"] to see a list of all tags.
-.. *_Option 2_*: Click on icon:filter_alt[set=material, role="darkGrey"] to narrow down the search results with filters.
-See the table below.
-. When you start the search, you’ll see the results in an overview.
-. Click on a tag to open it and edit its settings further.
-
-.Search filters
-[cols="1,4a"]
-|====
-|Filter |Explanation
-
-| *Name*
-|Enter the name of the tag in the main language of your plentymarkets system.
-
-| *Availability*
-|Select one or multiple areas. The search results only show the tags for this area.
-
-| *Language*
-|Select one ore several languages. The search results will only include tags that have a name saved in this language.
-
-|====
-
-.Control elements
-[cols="1,4a"]
-|====
-|Element |Explanation
-
-| *Reset*
-|Resets the selected filter criteria.
-
-| *Search*
-|Starts the search.
-|====
-
-
-
-////
-Use the search function to find your tags and edit them further.
-
-. Go to *Setup » Settings » Tags*.
-.. *_Option 1_*: Click on icon:search[role="darkGrey"] to see a list of all tags.
 .. *_Option 2_*: Enter a number or text into the search field and click on one of the automatic suggestions.
 Then click on icon:search[role="darkGrey"] to start the search.
 .. *_Option 3_*: Click on icon:tune[set=material, role="darkGrey"] to narrow down the search results with filters.
 See the table below.
 
-#image::artikel:standard-suche.gif[]#
+//image::artikel:standard-suche.gif[]
 
 .Search filters
 [cols="1,4a"]
@@ -106,7 +66,7 @@ Saving the current filters:
 . Click on *Save*. +
 → The filter settings now appear under *Saved filters* (icon:bookmarks[set=material, role="darkGrey"]).
 
-#image::artikel:vorlage-speichern.gif[]#
+//image::artikel:vorlage-speichern.gif[]
 
 [cols="1,4a"]
 |====
@@ -135,11 +95,12 @@ Applying saved filters:
 
 --
 
-. When you start the search, you’ll see the results in an overview.
-.. *_Option 1_*: Click on a tag to open it and edit its settings further.
-.. *_Option 2_*: Select multiple tags (icon:check-square[role="blue"]) and click on the pencil icon (icon:pencil[role="darkGrey"]).
+---
+
+When you start the search, you’ll see the results in an overview.
+
+* *_Option 1_*: Click on a tag to open it and edit its settings further.
+* *_Option 2_*: Select multiple tags (icon:check-square[role="blue"]) and click on the pencil icon (icon:pencil[role="darkGrey"]).
 This opens all of the selected tags at once and you can edit their settings further.
 
-#image::artikel:vorlage-speichern.gif[]#
-
-////
+//image::artikel:vorlage-speichern.gif[]
