Denise/pw 0.2.7 updates (#554)
* add setting for sorting orders DE

* some fixes DE

* add translation

--- a/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
@@ -151,10 +151,11 @@ Einstellungen vornehmen:
 *Aktiviert* (icon:toggle-on[role="green"]) = Lagerorte und Boxen _müssen_ per Scan ausgewählt werden, damit anschließend Artikel gebucht werden können. +
 *Nicht aktiviert* (icon:toggle-off[role="darkGrey"]) = Lagerorte und Boxen können manuell ausgewählt werden, indem du in der App auf sie tippst.
 
-//| *Sortierung der Aufträge*
-//|Diese Einstellung bestimmt genauer, nach welchem Kriterium Aufträge in die rollende Kommissionierung einbezogen werden sollen. +
-//*Auftrags-ID* = +
-//*Erstellungsdatum* = 
+| *Sortierung der Aufträge*
+|Diese Einstellung bestimmt genauer, nach welchem Kriterium Aufträge für die Abarbeitung innerhalb der rollenden Kommissionierung sortiert werden sollen. Wähle eine der folgenden Optionen aus: +
+*Auftrags-ID* = Aufträge werden beginnend mit der niedrigsten Auftrags-ID sortiert. +
+*Erstellungsdatum* = Aufträge werden beginnnend mit dem ältesten Erstellungsdatum sortiert. +
+*Zahlungseingang* = Aufträge werden beginnend mit dem ältesten Zahlungsdatum sortiert. *_Hinweis:_* Stelle wie gewohnt sicher, dass du nur Aufträge kommissionierst und somit für den Versand vorbereitest, die vollständig bezahlt sind.
 
 2+^| Bereich *Status*
 
