--- a/docs/de-de/modules/maerkte/pages/cdiscount.adoc
+++ b/docs/de-de/modules/maerkte/pages/cdiscount.adoc
@@ -37,7 +37,7 @@ Nachdem du Cdiscount in plentymarkets eingerichtet hast, findet der Datenaustaus
 
 | Auftragsimport
 | stündlich +
-*_Hinweis:_* Beim stündlichen Auftragsimport werden zunächst keine Rechnungs- und Lieferdaten von Cdiscount übermittelt. Der Auftrag bleibt solange in Status [3]. Es kann bis zu 48 Stunden dauern, bis die Rechnungs- und Lieferdaten übermittelt werden, da Cdiscount in dieser Zeit eine Bonitätsprüfung für Endkund:innen durchführt.
+*_Hinweis:_* Beim stündlichen Auftragsimport werden zunächst keine Rechnungs- und Lieferdaten von Cdiscount übermittelt. Der Auftrag bleibt solange in Status [3]. Es kann bis zu 48 Stunden dauern, bis die Rechnungs- und Lieferdaten übermittelt werden. Cdiscount führt in dieser Zeit eine Bonitätsprüfung für Endkund:innen durch.
 |===
 
 [#200]
