--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -38,7 +38,7 @@ Schnittstelle zu Check24 einrichten:
 [TIP]
 .Häufigkeit des Datenaustauschs
 ====
-Nachdem du Check24 in plentymarkets eingerichtet hast, findet der Datenaustausch in den in den folgenden Intervallen statt: +
+Nachdem du Check24 in plentymarkets eingerichtet hast, findet der Datenaustausch in den folgenden Intervallen statt: +
 - Auftragsimport alle 15 Minuten
 ====
 
