Added info about data exchange intervals (#555)
* Added table for data exchange

* Added translation for Cdiscount

* Update check24.adoc

* Added translation for Check24

* Update docs/de-de/modules/maerkte/pages/cdiscount.adoc

Co-authored-by: khoffmeister <khoffmeister@users.noreply.github.com>

* Update docs/de-de/modules/maerkte/pages/check24.adoc

Co-authored-by: khoffmeister <khoffmeister@users.noreply.github.com>

Co-authored-by: khoffmeister <khoffmeister@users.noreply.github.com>

--- a/docs/de-de/modules/maerkte/pages/cdiscount.adoc
+++ b/docs/de-de/modules/maerkte/pages/cdiscount.adoc
@@ -15,6 +15,31 @@ Fülle das link:https://seller.cdiscount.com/Account_creation.html[Registrierung
 
 Bevor du die hier gespeicherten Daten in deinem plentymarkets System speicherst, ändere dein API-Passwort. Ein neues Passwort wird dir in der Mailbox deines Händler-Backends zugesandt.
 
+[#datenaustausch]
+== Häufigkeit des Datenaustauschs
+
+Nachdem du Cdiscount in plentymarkets eingerichtet hast, findet der Datenaustausch in den in <<#data-exchange>> beschriebenen Intervallen statt:
+
+[[data-exchange]]
+.Häufigkeit des Datenaustauschs
+[cols="1,1a"]
+|===
+|Daten |Intervall
+
+| Artikelexport
+| täglich
+
+| Bestandsabgleich
+| alle 15 Minuten
+
+| Preisabgleich
+| alle 15 Minuten
+
+| Auftragsimport
+| stündlich +
+*_Hinweis:_* Beim stündlichen Auftragsimport werden zunächst keine Rechnungs- und Lieferdaten von Cdiscount übermittelt. Der Auftrag bleibt solange in Status [3]. Es kann bis zu 48 Stunden dauern, bis die Rechnungs- und Lieferdaten übermittelt werden. Cdiscount führt in dieser Zeit eine Bonitätsprüfung für Endkund:innen durch.
+|===
+
 [#200]
 == Cdiscount in plentymarkets einrichten
 
@@ -128,14 +153,6 @@ Die hier wählbaren Optionen sind die im Menü *Einrichtung » Aufträge » Vers
 | *Artikel-ID für die Ratengebühr*
 |ID des Artikels, über den Kund:innen die Gebühr für den Ratenkauf, die Cdiscount erhebt, in Rechnung gestellt wird. Dazu einen Artikel in plentymarkets erstellen und die ID hier eingeben.
 |===
-
-Die Anbindung des Marktplatzes stellt folgende automatisierten Funktionen bereit:
-
-* Täglicher Artikelexport
-* Stündlicher Bestandsabgleich
-* Stündlicher Auftragsimport
-
-Beim stündlichen Auftragsimport werden zunächst keine Rechnungs- und Lieferdaten von Cdiscount übermittelt. Der Auftrag bleibt solange in Status [3]. Es kann bis zu 48 Stunden dauern, bis die Rechnungs- und Lieferdaten übermittelt werden, da Cdiscount in dieser Zeit eine Bonitätsprüfung für Endkund:innen durchführt.
 
 [#einzelartikel-variantenartikel]
 == Unterscheidung von Einzelartikeln und Variantenartikeln
