add button lagerort kaufabwicklung

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -967,7 +967,12 @@ Du kannst folgende Auftragstypen anlegen:
 | Klicke auf...
 Das Icon ist nur zu sehen, wenn 
 
-Neu dazu kommt auch icon:delete[set=material] rechts oben. Das Icon ist nur dann aktiv, wenn wirklich etwas gelöscht werden kann. Durch Klick auf das Icon ist der linke Eintrag weg und man ist zurück in der Suche.
+| *Kaufabwicklung Weiterleitung*
+| Auge icon:...[set=material]
+| Klicke auf Icon Auge, um auf einen Webshop weitergeleitet zu werden.
+vgl Übersicht - Kaufabwickung alte UI
+
+Neu dazu kommt auch icon:delete[set=material] rechts oben. Das Icon ist nur dann aktiv, wenn wirklich etwas gelöscht werden kann. Durch Klick auf icon:delete[set=material] ist der linke Eintrag weg und man ist zurück in der Suche.
 // TODO: nachvollziehen und ergänzen
 
 
@@ -1170,6 +1175,8 @@ Im Bereich *Auftragspositionen* siehst du alle für den Auftrag relevante Inform
 Über icon:settings[set=material] kannst du die *Spalten konfigurieren*.
 Über icon:edit[set=material] kannst du in Artikel bearbeiten. Dies wird dir in der Seitennavigation links eingerückt in blauer Schrift angezeigt.
 
+*_Hinweis_*: Du kannst Auftragspositionen nur dann bearbeiten, wenn noch kein Warenausgang gebucht ist. Wenn Waren verschickt wurden, kannst du die Positionen nicht mehr bearbeiten.
+
 [[table-order-positions]]
 .Bereich: Auftragspositionen
 [cols="1,3"]
@@ -1362,8 +1369,8 @@ Bei Standardeinstellung wird der ... Der manuelle Preis ...
 |Das Lager wird angezeigt.
 
 |*USt. (%)*
-|Die Umsatzsteuer in % wird angezeigt. +
-Voreinstellt sind 19.00 %. In der Dropdown-Liste kannst du den Steuersatz ändern. 
+|Die Umsatzsteuer wird in % angezeigt. +
+Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. 
 
 Rechts über icon:delete[set=material] kannst du Auftragspositionen löschen.
 |====
@@ -2506,11 +2513,11 @@ Beachte, dass nur die Funktionen angezeigt werden, die auf diesen Auftrag angewe
 // TODO: überarbeiten; Tabelle in Tabelle?
 . Die Auftrags-ID wird angezeigt.
 . Der Betrag wird angezeigt, ist aber editierbar.
-. Wähle durch Klick auf *Haben/Soll* die gewünschte Option aus. Voreingestellt ist Haben.
-. Wähle durch Klick auf *Währung* per Dropdown die gewünschte Währung aus. Voreingestellt ist EUR.
-. Der Wechselkurs wird angezeigt, ist editierbar.
-. Der Verwendungszweck wird angezeigt. Voreingestellt ist … 
-. Bei Zahlungseingang wird das aktuelle Datum angezeigt. Durch Klick auf das Kalendersymbol kann das Datum geändert werden.
+. Wähle durch Klick auf *Haben/Soll* die gewünschte Option aus. Voreingestellt ist *Haben*.
+. Wähle durch Klick auf *Währung* per Dropdown die gewünschte Währung aus. Voreingestellt ist *EUR*.
+. Der Wechselkurs wird angezeigt.
+. Der Verwendungszweck wird angezeigt.
+. Bei Zahlungseingang wird das aktuelle Datum angezeigt. Durch Klick auf icon:today[set=material] kann das Datum geändert werden.
 . Klicke auf *Ausführen* (icon…), um die Angaben zu bestätigen. 
 
 
