--- a/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
@@ -115,9 +115,25 @@ Bestand::
 ====
 
 [#350]
-=== Shortcuts in der Artikelansicht nutzen
+=== Zusätzliche Aktionen in der Artikelansicht
 
+Wenn du Artikel <<#300, suchst>> und die Detailansicht eines Artikel öffnest, werden dir so genannte Shortcuts angezeigt. Diese erlauben dir, direkt weitere Aufgaben für den Artikel zu erledigen. <<table-item-search-shortcuts>> enthält weitere Informationen zu den verfügbaren Optionen.
 
+[[table-item-search-shortcuts]]
+.Verfügbare Shortcuts in der Artikelansicht
+[cols="2,1,6"]
+|====
+|Bedienelement |Symbol |Erläuterung
+
+|[#intable-add-note]*Etikett drucken*
+|icon:print[set=material]
+| Öffnet die Ansicht zur Eingabe einer Auftragsnotiz. Nutze diese Funktion, um einen Kommentar zu speichern, der in der späteren Abwicklung an jedem Auftrag, in dem der Artikel vorhanden ist, im Backend deines plentymarkets System einsehbar ist.
+
+|[#intable-add-note]*Artikel umbuchen*
+|(icon:sync_alt[set=material])
+| Öffnet die Ansicht zur Eingabe einer Auftragsnotiz. Nutze diese Funktion, um einen Kommentar zu speichern, der in der späteren Abwicklung an jedem Auftrag, in dem der Artikel vorhanden ist, im Backend deines plentymarkets System einsehbar ist.
+
+|====
 
 [#400]
 == Lagerorte suchen
