--- a/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
@@ -278,7 +278,7 @@ Artikel picken:
 
 Während du <<#1200, Artikel pickst>>, kann es zu Sonderfällen kommen. Beispielsweise kann es sein, dass du einen Artikel ans Ende der Liste verschieben möchtest, weil du erst später am Lagerort des Artikels ankommst. Oder es kommt vor, dass ein Artikel am Lagerort nicht vorrätig ist oder du eine Notiz mit einem Hinweis zum Auftrag hinterlassen möchtest.
 
-Für solche Fälle findest du in der Ansicht des jeweiligen Artikels Shortcuts, mit denen du diese Aktionen schnell durchführen kannst. <<table-box-picking-shortcuts>> enthält weitere Informationen zu den verfügbaren Shortcuts.
+Für solche Fälle findest du in der Ansicht des jeweiligen Artikels Shortcuts, mit denen du diese Aktionen schnell durchführen kannst. <<table-box-picking-shortcuts>> enthält weitere Informationen zu den verfügbaren Optionen.
 
 [[table-box-picking-shortcuts]]
 .Verfügbare Shortcuts in der Artikelansicht
