--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -83,7 +83,7 @@ Die so erstellten Picklisten werden automatisch mit plentyWarehouse synchronisie
 
 Öffne zunächst die Pickliste, die du bearbeiten möchtest. Gehe dazu wie unten beschrieben vor.
 
-[instruction]
+[.instruction]
 Pickliste öffnen:
 
 . xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
