--- a/docs/en-gb/modules/pos/pages/demo.adoc
+++ b/docs/en-gb/modules/pos/pages/demo.adoc
@@ -387,7 +387,7 @@ Your customer bought an item in the morning and then later that afternoon notice
 
 plentyPOS allows you to cancel orders that were created _since the last Z report_.
 
-[instruction]
+[.instruction]
 Cancelling an order:
 
 . From the start screen, tap on icon:trash[role="red"] *Cancel order*. +
@@ -504,7 +504,7 @@ a|[instruction]
 
 You can check how much cash is in the register at any given time. This is done by creating a so-called “till count” report. The banknotes and coins are physically counted and the result is documented.
 
-[instruction]
+[.instruction]
 Saving a till count result:
 
 . From the start screen, tap on icon:money[role="darkGrey"] *Till count*. +
@@ -540,7 +540,7 @@ At the end of the day, it’s customary to document how much revenue was generat
 
 Strictly speaking, a Z report documents the revenue accrued since the last Z report. In some countries, sellers are required to save these reports for fiscal purposes.
 
-[instruction]
+[.instruction]
 Creating a Z report:
 
 . From the start screen, tap on icon:file-text-o[role="darkGrey"] *Z report*.
@@ -598,7 +598,7 @@ Tap on an item and change its data directly while ringing up the customer. The c
 --
 Is your cashier starting to run out of change? Then you’ll need to put more coins in the till drawer and of course, document the procedure correctly.
 
-[instruction]
+[.instruction]
 Booking a cash deposit or withdrawal:
 
 . From the start screen, tap on icon:money[role="darkGrey"] *Deposits and withdrawals*.
