--- a/docs/de-de/modules/changelog/pages/2022-05-11.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-05-11.adoc
@@ -36,11 +36,7 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlich
 
 +
 Beispiel für den Inhalt des Hinweises, wenn von Deutschland aus geliefert wird:
-
-[code]
-------
-Es handelt sich im deutschen Steuerrecht um eine steuerfreie Ausfuhrlieferung nach §§ 4 Nr. 1a i.V.m. 6 UStG.
-------
+`Es handelt sich im deutschen Steuerrecht um eine steuerfreie Ausfuhrlieferung nach §§ 4 Nr. 1a i.V.m. 6 UStG.`
 
 [discrete]
 === Ereignisaktionen
