--- a/docs/en-gb/modules/stock-management/pages/box-picking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/box-picking.adoc
@@ -13,11 +13,11 @@ The plentyWarehouse app offers a new and improved function for box picking. You 
 [IMPORTANT]
 .Use labels for storage locations
 ====
-For mobile box picking with plentyWarehouse, we recommend that you create one label for each storage location and <<#400, box>> and that you attach it to the respective storage location. During box picking, you use your device to scan the barcode on the label to select the appropriate storage locations and box storage locations.
+For mobile box picking with plentyWarehouse, we recommend that you create one label for each storage location and <<#400\. box>> and that you attach it to the respective storage location. During box picking, you use your device to scan the barcode on the label to select the appropriate storage locations and box storage locations.
 Have you not created labels for storage locations yet? Refer to the xref:stock-management:setting-up-a-warehouse.adoc#800[Setting up a warehouse] page of the manual.
 ====
 
-First, read a <<#100, short description on box picking>> that explains the process. Afterwards, the <<#200, settings>> that you should carry out in advance will be described. These settings go into effect when you <<#800, use the function>>.
+First, read a <<#100, short description on box picking>> that explains the process. Afterwards, the <<#200\. settings>> that you should carry out in advance will be described. These settings go into effect when you <<#800, use the function>>.
 
 [#100]
 == How does box picking work?
@@ -72,7 +72,7 @@ Making boxes available:
 Before box picking is carried out in plentyWarehouse, make sure that all users have been assigned the appropriate rights. This is necessary to make sure that the picking process is carried out correctly.
 
 :rights-purpose: carry out box picking in plentyWarehouse
-:right-one: pass:quotes[*Item > Item > Item image > Item image name > Show*]
+:right-one_ pass:quotes[*Item > Item > Item image > Item image name > Show*]
 :right-two: pass:quotes[*Orders > Show*]
 :right-three: pass:quotes[*Orders > Update*]
 :right-four: pass:quotes[*Comments > Show*]
@@ -278,7 +278,7 @@ Picking items:
 
 Some particular use cases may occur while you are <<#1200, picking items>>. For example, it might be necessary to move an item to the end of the list because you will only get to the storage location of the item at a later point in the picking process. Maybe an item is not available at the indicated storage location, or you want to create an order note containing a comment on the item.
 
-For such cases, the view on each item contains shortcuts that allow you to carry out these tasks quickly. <<table-box-picking-shortcuts>> contains additional information on the available shortcuts.
+For such cases, the view on each item contains shortcuts which allow you to quickly take care of these tasks. <<table-box-picking-shortcuts>> contains additional information on the available options.
 
 [[table-box-picking-shortcuts]]
 .Available shortcuts in the item view
