fix formatting / update screenshots

--- a/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
@@ -226,7 +226,7 @@ Lagerorte suchen und inspizieren:
 
 . xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
 . Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links. +
-icon:map-signs[] *_Oder:_*: Finde die Kachel zum *Lagerort inspizieren* im Bereich *Funktionen* auf dem Dashboard.
+icon:map-signs[] *_Oder:_* Finde die Kachel zum *Lagerort inspizieren* im Bereich *Funktionen* auf dem Dashboard.
 . Tippe auf *Lagerort inspizieren* (image:warenwirtschaft:icon_inspect_storage_location.png[width=24, height=24]). +
 → Die Ansicht zur Suche von Lagerorten wird geöffnet.
 . Gib ein Suchkriterium ein. Scanne z.B. mit deinem Gerät den Barcode des xref:warenwirtschaft:lager-einrichten.adoc#800[Lagerort-Labels]. +
