--- a/docs/en-gb/modules/stock-management/pages/items-and-storage-locations.adoc
+++ b/docs/en-gb/modules/stock-management/pages/items-and-storage-locations.adoc
@@ -226,7 +226,7 @@ Searching for and inspecting storage locations:
 
 . xref:stock-management:installation-and-initial-setup.adoc#300[Log into plentyWarehouse].
 . Tap on the menu icon (icon:bars[role="darkGrey"]) in the top left corner. +
-icon:map-signs[] *_Or:_*: Find the *Inspect storage location* tile in the *Functions* area of the dashboard.
+icon:map-signs[] *_Or:_* Find the *Inspect storage location* tile in the *Functions* area of the dashboard.
 . Tap on *Inspect storage location* (image:stock-management:icon_inspect_storage_location.png[width=24, height=24]). +
 → The storage location search opens.
 . Enter a search criterion. Use your device to scan the barcode of the xref:stock-management:setting-up-a-warehouse.adoc#800[storage location label]. +
